============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.5 - not yet released
* map
  - lower zoom levels possible while circling (#1120)
  - draw FAI triangle areas (#1563)
  - optimise the terrain renderer
* calculations
  - don't detect landing while climbing in a wave (#1330, #2289, #2406)
  - basic support for the contest "DMSt" (#2208)
* tasks
  - add task start countdown (#136, #1080)
  - optimise racing tasks for minimum distance
* devices
  - LX: support flight download from LXNAV Nano (#2085)
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
  - Android/IOIO: support MS5611 pressure sensor
  - added driver for Levil AHRS device
* logger
  - auto-flush IGC logger after every fix
* user interface
  - preselect first item with details in map item list for
    faster access (#2069, #2207)
  - non-modal FLARM radar (with InfoBoxes and menu)
  - show FAI triangle sectors in task manager
  - can drag modal dialogs
  - short click opens InfoBox dialog
  - support keyboard input on desktop computer
  - improved angle input (e.g. wind direction, sector radials)
  - faster map initialisation during startup
  - reduce audio vario latency
* infoboxes
  - added thermal assistant infobox
  - inverse colors for wind arrow infobox and flarm gauge (#2337)
* track friends via internet connection (SkyLines live tracking)

Version 6.4.6 - not yet released
* infoboxes
  - fixes broken wind arrow display in some situations (#2295)

Version 6.4.5 - 2012/12/14
* calculations
  - fix rounding error in convex boundary calculation (#2477)
* devices
  - Vega: fix MacCready setting feedback loop (#1218, #2490)
* user interface
  - faster gesture drawing
  - fix crash in InfoBox page setup (#2122)
  - allow scrolling the check list on Altair (#1289)
* map
  - fix crash in terrain renderer with broken map file (#2478)